--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="description" content="simple-quote-page">
   <meta charset="utf-8">
-  <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width", initial-scale=1">
+   <link rel="stylesheet" type="text/css" href="main.css">                                                                   
+  <title>simple-quote-page</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Julius+Sans+One&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <div class="wrapper">
+  <p class="quote">"The freedom of mankind does not lie in the fact that we
+    can do what we want, but that we do not have to do that which 
+    we do not want."
+  <p class="name">-Jean Jacques Rousseau</p>
+  </div>
 </body>
 </html>
-
+                 
